--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -843,7 +843,7 @@
   "wallet.summary.page.yesterdayLabel": "昨日",
   "wallet.transaction.address.from": "送信元",
   "wallet.transaction.address.to": "送信先",
-  "wallet.transaction.addresses.from": "送信元",
+  "wallet.transaction.addresses.from": "送信元アドレス",
   "wallet.transaction.addresses.to": "送信先",
   "wallet.transaction.conversion.rate": "両替率",
   "wallet.transaction.filter.allTransactions": "すべてのトランザクション",
@@ -866,6 +866,7 @@
   "wallet.transaction.pending.supportArticleLink": "このトランザクションをキャンセルする理由",
   "wallet.transaction.pending.supportArticleUrl": "https://iohk.zendesk.com/hc/ja/articles/360038113814",
   "wallet.transaction.received": "{currency}入金",
+  "wallet.transaction.rewards.from": "送信元報酬",
   "wallet.transaction.sent": "{currency}送金",
   "wallet.transaction.state.confirmed": "トランザクション承認済み",
   "wallet.transaction.state.pending": "トランザクション処理中",
