[DDW-295] Retirement thumbnail and disclaimer

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -321,10 +321,11 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "You are already pending delegation <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.description": "Currently selected stake pool:",
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "Choose one of your recent stake pool choices:",
+  "staking.delegationSetup.chooseStakePool.step.dialog.retiringPoolFooter": "The stake pool you have selected is about to be retired. If you continue the delegation process, you will need to delegate your stake to another pool at least one complete epoch before the current pool’s retirement date to avoid losing rewards.",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "Or select a stake pool from the list of all available stake pools:",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "Search stake pools",
-  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "Select a stake pool to receive your delegated funds in the <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "You have selected <span>[{selectedPoolTicker}]</span> stake pool to delegate to for <span>{selectedWalletName}</span> wallet.",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "Select a stake pool to receive your delegated funds in the <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
   "staking.delegationSetup.chooseStakePool.step.dialog.title": "Choose a stake pool",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "Continue",
