--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -321,10 +321,11 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールへの委任処理中です。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.description": "現在選択されているステークプール：",
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "最近選択したステークプールから選択する：",
+  "staking.delegationSetup.chooseStakePool.step.dialog.retiringPoolFooter": "選択されたステークプールはまもなく終了します。このまま委任プロセスを続けた場合、このプールの終了に伴い報酬が停止することを避けるためには、プール終了日までに完全な1エポック以上が残っているうちに別のプールにステークを委任し直す必要があります。",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "または利用可能な全ステークプールのリストから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "ステークプールを検索する",
-  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの資金を委任するステークプールを選んでください。",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの委任先に<span>「{selectedPoolTicker}」</span>ステークプールが選択されました。",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの資金を委任するステークプールを選んでください。",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
   "staking.delegationSetup.chooseStakePool.step.dialog.title": "ステークプールを選択する",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "続ける",
