[DDW-295] Show stake pool retirement info (#2068)
* [DDW-295] Show stake pool retirement info

* [DDW-295] Retirement thumbnail and disclaimer

* [DDW-295] Thumbnail organization to reinforce DRY

* [DDW-295] Selection Pool label

* [DDW-295] Fix retirement time display in Japanese

Co-authored-by: Danilo Prates <daniloprates@gmail.com>

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -276,6 +276,8 @@
   "settings.support.steps.title": "Steps for creating a support request:",
   "sidebar.wallets.addWallet": "Add wallet",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
+  "staking.delegationCenter.TooltipPoolTickerEarningRewards": "!!!Earning rewards",
+  "staking.delegationCenter.TooltipPoolTickerEpoch": "!!!From epoch {fromEpoch}",
   "staking.delegationCenter.bodyTitle": "Wallets",
   "staking.delegationCenter.currentSlot": "Current slot",
   "staking.delegationCenter.delegate": "Delegate",
@@ -291,8 +293,6 @@
   "staking.delegationCenter.or": "or",
   "staking.delegationCenter.redelegate": "Redelegate",
   "staking.delegationCenter.removeDelegation": "Undelegate",
-  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "Earning rewards",
-  "staking.delegationCenter.stakePoolTooltipTickerEpoch": "From epoch {fromEpoch}",
   "staking.delegationCenter.syncingTooltipLabel": "Syncing {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "Total slots",
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "Calculating fees",
@@ -321,10 +321,12 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "You are already pending delegation <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.description": "Currently selected stake pool:",
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "Choose one of your recent stake pool choices:",
+  "staking.delegationSetup.chooseStakePool.step.dialog.retiringPoolFooter": "The stake pool you have selected is about to be retired. If you continue the delegation process, you will need to delegate your stake to another pool at least one complete epoch before the current pool’s retirement date to avoid losing rewards.",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "Or select a stake pool from the list of all available stake pools:",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "Search stake pools",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "Select a stake pool to receive your delegated funds in the <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "You have selected <span>[{selectedPoolTicker}]</span> stake pool to delegate to for <span>{selectedWalletName}</span> wallet.",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabelRetiring": "The [{selectedPoolTicker}] stake pool which you have selected to delegate your <span>{selectedWalletName}</span> wallet funds is about to retire.",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
   "staking.delegationSetup.chooseStakePool.step.dialog.title": "Choose a stake pool",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "Continue",
