--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -276,6 +276,8 @@
   "settings.support.steps.title": "サポートリクエストの作成方法：",
   "sidebar.wallets.addWallet": "ウォレット追加",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
+  "staking.delegationCenter.TooltipPoolTickerEarningRewards": "!!!Earning rewards",
+  "staking.delegationCenter.TooltipPoolTickerEpoch": "!!!From epoch {fromEpoch}",
   "staking.delegationCenter.bodyTitle": "ウォレット",
   "staking.delegationCenter.currentSlot": "現行スロット",
   "staking.delegationCenter.delegate": "委任する",
@@ -291,8 +293,6 @@
   "staking.delegationCenter.or": "または",
   "staking.delegationCenter.redelegate": "再設定する",
   "staking.delegationCenter.removeDelegation": "委任を解除する",
-  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
-  "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中 {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "総スロット数",
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "手数料を計算しています",
@@ -321,10 +321,12 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールへの委任処理中です。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.description": "現在選択されているステークプール：",
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "最近選択したステークプールから選択する：",
+  "staking.delegationSetup.chooseStakePool.step.dialog.retiringPoolFooter": "選択されたステークプールはまもなく終了します。このまま委任プロセスを続けた場合、このプールの終了に伴い報酬が停止することを避けるためには、プール終了日までに完全な1エポック以上が残っているうちに別のプールにステークを委任し直す必要があります。",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "または利用可能な全ステークプールのリストから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "ステークプールを検索する",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの資金を委任するステークプールを選んでください。",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの委任先に<span>「{selectedPoolTicker}」</span>ステークプールが選択されました。",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabelRetiring": "<span>{selectedWalletName}</span>ウォレットの委任先として選択されている「{selectedPoolTicker}」ステークプールはまもなく終了します。",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
   "staking.delegationSetup.chooseStakePool.step.dialog.title": "ステークプールを選択する",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "続ける",
