[DDW-300] Copy action and fix translation

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -276,8 +276,8 @@
   "settings.support.steps.title": "Steps for creating a support request:",
   "sidebar.wallets.addWallet": "Add wallet",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
-  "staking.delegationCenter.TooltipPoolTickerEarningRewards": "!!!Earning rewards",
-  "staking.delegationCenter.TooltipPoolTickerEpoch": "!!!From epoch {fromEpoch}",
+  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "!!!Earning rewards",
+  "staking.delegationCenter.stakePoolTooltipTickerEpoch": "!!!From epoch {fromEpoch}",
   "staking.delegationCenter.bodyTitle": "Wallets",
   "staking.delegationCenter.currentSlot": "Current slot",
   "staking.delegationCenter.delegate": "Delegate",
