--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -276,8 +276,8 @@
   "settings.support.steps.title": "サポートリクエストの作成方法：",
   "sidebar.wallets.addWallet": "ウォレット追加",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
-  "staking.delegationCenter.TooltipPoolTickerEarningRewards": "!!!Earning rewards",
-  "staking.delegationCenter.TooltipPoolTickerEpoch": "!!!From epoch {fromEpoch}",
+  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
+  "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.bodyTitle": "ウォレット",
   "staking.delegationCenter.currentSlot": "現行スロット",
   "staking.delegationCenter.delegate": "委任する",
