[DDW-300] Fix translation

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -276,8 +276,6 @@
   "settings.support.steps.title": "Steps for creating a support request:",
   "sidebar.wallets.addWallet": "Add wallet",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
-  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "!!!Earning rewards",
-  "staking.delegationCenter.stakePoolTooltipTickerEpoch": "!!!From epoch {fromEpoch}",
   "staking.delegationCenter.bodyTitle": "Wallets",
   "staking.delegationCenter.currentSlot": "Current slot",
   "staking.delegationCenter.delegate": "Delegate",
@@ -293,6 +291,8 @@
   "staking.delegationCenter.or": "or",
   "staking.delegationCenter.redelegate": "Redelegate",
   "staking.delegationCenter.removeDelegation": "Undelegate",
+  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "Earning rewards",
+  "staking.delegationCenter.stakePoolTooltipTickerEpoch": "From epoch {fromEpoch}",
   "staking.delegationCenter.syncingTooltipLabel": "Syncing {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "Total slots",
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "Calculating fees",
