[DDW-300] Adds stake pool id to the stake pool tooltip (#2071)
* [DDW-300] Adds stake pool id to the stake pool tooltip

* [DDW-300] ID hovering

* [DDW-300] Copy action and fix translation

* [DDW-300] Fix translation

* [DDW-300] Remove unnecessary variable

* [DDW-300] Remove ID hovering

* [DDW-300] Run translation manager

Co-authored-by: Danilo Prates <daniloprates@gmail.com>

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -276,8 +276,6 @@
   "settings.support.steps.title": "サポートリクエストの作成方法：",
   "sidebar.wallets.addWallet": "ウォレット追加",
   "staking.countdown.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
-  "staking.delegationCenter.TooltipPoolTickerEarningRewards": "!!!Earning rewards",
-  "staking.delegationCenter.TooltipPoolTickerEpoch": "!!!From epoch {fromEpoch}",
   "staking.delegationCenter.bodyTitle": "ウォレット",
   "staking.delegationCenter.currentSlot": "現行スロット",
   "staking.delegationCenter.delegate": "委任する",
@@ -293,6 +291,8 @@
   "staking.delegationCenter.or": "または",
   "staking.delegationCenter.redelegate": "再設定する",
   "staking.delegationCenter.removeDelegation": "委任を解除する",
+  "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
+  "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中 {syncingProgress}%",
   "staking.delegationCenter.totalSlots": "総スロット数",
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "手数料を計算しています",
