[DDW-301] Implement stake pool ID hover and copy (#2074)
* Revert "[DDW-300] Remove ID hovering"

This reverts commit 567244b7089fb2e16a9c78c09db3b70890c5c16b.

* [DDW-301] Implement stake pool ID hover and copy

* [DDW-301] Translation manager

* [DDW-301] Remove temporary code

* [DDW-301] CHANGELOG

* Update splash screen Japanese text copy

* [DDW-301] Hovering improvements

* [DDW-301] Adjustments

* [DDW-301] Improve CHANGELOG

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -455,6 +455,7 @@
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
+  "staking.stakePools.tooltip.copyIdTooltipLabel": "Copy the stake pool ID",
   "staking.stakePools.tooltip.costPerEpoch": "Cost per epoch:",
   "staking.stakePools.tooltip.delegateButton": "Delegate to this pool",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "Experimental feature, data may be inaccurate.",
@@ -489,7 +490,7 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "Learn more",
-  "static.splash.network.stnDescription": "<p>This version of Daedalus has been created specifically for the use with the second phase of the Shelley Testnet.</p><p>If you participated in the Incentivized Testnet program you can use this version of Daedalus to check your Incentivized Testnet rewards. You can do this by restoring a wallet using the 15-word wallet recovery phrase for your Daedalus Rewards wallet.</p>",
+  "static.splash.network.stnDescription": "<p>This version of Daedalus has been created specifically for the use with the second iteration of the Shelley testnet network.</p><p>You can use it to experience the delegation mechanics and understand how the rewards work, using testnet ada before this becomes available on the Cardano mainnet later this summer.</p>",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
   "static.splash.network.stnVersionName": "SHELLEY TESTNET",
   "static.splash.network.title": "Daedalus",
