--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -455,6 +455,7 @@
   "staking.stakePools.search.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.search.listTitle": "ステークプール ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
+  "staking.stakePools.tooltip.copyIdTooltipLabel": "ステークプールIDをコピーする",
   "staking.stakePools.tooltip.costPerEpoch": "エポックごとのコスト：",
   "staking.stakePools.tooltip.delegateButton": "このプールに委任する",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "実験的機能データは不正確な場合があります",
@@ -489,7 +490,7 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "もっと知る",
-  "static.splash.network.stnDescription": "<p>このDaedalusバージョンは、Shelleyテストネット第2フェーズで使用するための専用バージョンです。</p><p>インセンティブ付きテストネットプログラムに参加していた場合は、このDaedalusバージョンを使用して、インセンティブ付きテストネットの報酬を確認することができます。15語のウォレット復元フレーズを使用して、Daedalus Rewardsのウォレットを復元してください。</p>",
+  "static.splash.network.stnDescription": "<p>このDaedalusバージョンは、Shelleyテストネットネットワーク第2イテレーションで使用するための専用バージョンです。</p><p>本バージョンにより、今夏委任機能がCardanoメインネットで使用可能となる前に、テストネットADAを使用してそのメカニズムを体験し、報酬の仕組みを理解することができます。</p>",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
   "static.splash.network.stnVersionName": "Shelleyテストネット",
   "static.splash.network.title": "Daedalus",
