[DDW-294] Byron to shelley transition - fix

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -2568,7 +2568,7 @@
         }
       },
       {
-        "defaultMessage": "!!!This version of Daedalus has been created specifically for the use with the second phase of the Shelley Testnet.",
+        "defaultMessage": "!!!This version of Daedalus has been created to be used specifically with the third iteration of the Shelley testnet network.",
         "description": "stnDescription on network splash screen",
         "end": {
           "column": 3,
