--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -181,8 +181,8 @@
   "news.newsfeed.noFetch": "Trying to fetch the newsfeed...",
   "news.newsfeed.title": "Newsfeed",
   "news.updateOverlay.title": "Software update available!",
-  "news.updateOverlay.subtitle": "You are currently running Daedalus version 0.14.7. Daedalus version 1.2.2 is now available to download.",
-  "news.updateOverlay.checkboxLabel": "I understand that I need to complete the installation before restarting Daedalus.",
+  "news.updateOverlay.subtitle": "You are currently running Daedalus version <b>{currentVersion}</b>. Daedalus version <b>{availableVersion}</b> is now available to download.",
+  "news.updateOverlay.checkboxLabel": "I understand that I need to complete the installation before starting Daedalus.",
   "news.updateOverlay.buttonLabel": "Quit Daedalus and start the installation",
   "news.updateOverlay.downloadInProgressLabel": "Download in progress",
   "news.updateOverlay.downloadProgress": "({downloaded} MB of {total} MB downloaded)",
