--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -180,6 +180,12 @@
   "news.newsfeed.empty": "ニュースフィードは空です",
   "news.newsfeed.noFetch": "ニュースフィードを読み込んでいます…",
   "news.newsfeed.title": "ニュースフィード",
+  "news.updateOverlay.title": "ソフトウェアが更新できます!",
+  "news.updateOverlay.subtitle": "このDaedalusはバージョン<b>{currentVersion}</b>です。現在Daedalus <b>{availableVersion}</b>がダウンロード可能です",
+  "news.updateOverlay.checkboxLabel": "Daedalusを起動する前に、インストールを完了する必要があることを理解しました。",
+  "news.updateOverlay.buttonLabel": "Daedalusを終了してインストールを開始する",
+  "news.updateOverlay.downloadInProgressLabel": "ダウンロードしています",
+  "news.updateOverlay.downloadProgress": "（{downloaded}MB/{total}MBをダウンロード済み）",
   "noDiskSpace.error.overlayContent": "<b>Daedalusを動作させるには、ハードディスクに{diskSpaceRequired}以上の空き容量が必要です。ご使用のコンピューターには空き容量が{diskSpaceMissing}不足しています。Daedalusのご利用を続けるためには、ファイルをいくつか削除して空き容量を増やしてください。</b><br /><br />オペレーティングシステムとインストール済みプログラムを正常かつ安定した状態で動作させるには、ハードディスクに少なくとも15%（ご使用のコンピューターの場合は{diskSpaceRecommended}）の空き容量が必要です。ハードディスクにこれ以上の空き容量を確保してください。",
   "noDiskSpace.error.overlayTitle": "ハードディスクの空き容量が不足しているためDaedalusを作動できません",
   "notification.copyAddress": "アドレス：<strong>{address}</strong>をクリップボードにコピーしました",
