--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -112,7 +112,6 @@
   "global.duration.months": "months",
   "global.duration.seconds": "seconds",
   "global.duration.years": "years",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "This field is required.",
   "global.errors.incompleteMnemonic": "Please enter all {expected} words.",
   "global.errors.invalidEmail": "Invalid email entered, please check.",
@@ -130,7 +129,6 @@
   "global.labels.close": "Close",
   "global.labels.create": "Create",
   "global.labels.filter": "Filter",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "Remove",
   "global.labels.reset": "Reset",
   "global.labels.save": "Save",
@@ -313,9 +311,9 @@
   "staking.delegationCenter.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.walletAmount": "{amount} ADA",
   "staking.delegationCountdown.buttonLabel": "Learn more",
-  "staking.delegationCountdown.description": "Cardano will soon start its transition from a federated to a decentralized system. This will mark the start of stakeholders being able to earn rewards for participating in the running of the network. They will be able to participate directly in the process of staking or can delegate their stake to stake pools to earn rewards in ada.",
-  "staking.delegationCountdown.heading": "Cardano decentralization",
-  "staking.delegationCountdown.timeLeftDesc": "Rewards begin in",
+  "staking.delegationCountdown.description": "Cardano will soon start transitioning from a federated to a decentralized system. The first step is the activation of the Shelley upgrade. Once the upgrade is complete, stake pools will start registering and users will be able to delegate their wallets. Two epochs (12 hours) later, stake pools will begin producing blocks and users could start earning rewards from delegating their stakes. The first rewards, where due, will be distributed two more epochs later (12 hours).",
+  "staking.delegationCountdown.heading": "Shelley upgrade",
+  "staking.delegationCountdown.timeLeftDesc": "Shelley upgrade in",
   "staking.delegationSetup.chooseStakePool.step.dialog.continueButtonLabel": "Continue",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolLabel": "You are already delegating <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "You are already pending delegation <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
@@ -377,10 +375,10 @@
   "staking.epochs.tableHeader.performance": "Performance",
   "staking.epochs.tableHeader.sharedRewards": "Shared rewards",
   "staking.info.buttonLabel": "Learn more",
-  "staking.info.description": "Cardano is transitioning from a federated system controlled by its creators, to a decentralized system run by ada stakeholders. During this change, some new blocks will be produced by nodes operated in a federated way and some by nodes run by ada stakeholders. All rewards will be distributed to ada stakeholders and none to operators of federated nodes.",
-  "staking.info.heading": "Cardano is turning into a decentralized system",
+  "staking.info.description": "Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
+  "staking.info.heading": "Cardano is transitioning into a decentralized system",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
-  "staking.info.percentage": "Currently, {percentage}% of the system is decentralized and operated by stake pools.",
+  "staking.info.percentage": "Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.navigation.delegation_center": "Delegation center",
   "staking.navigation.epochs": "Epochs",
   "staking.navigation.info": "Info",
@@ -475,7 +473,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "I understand",
   "static.splash.network.flightDescription1": "Thank you for downloading the Daedalus Flight wallet! This version of Daedalus is specially created so users can test new features and we can squash usability bugs before pushing releases to the mainnet production version of the Daedalus wallet. ",
   "static.splash.network.flightDescription2": "Although Flight candidates are designed to test functionality, this is on the mainnet and will <b>be using mainnet ada. Transactions made using Flight candidates will be real ada payments.</b> If you are not a power user, we recommend you stick to using our stable, fully-tested production Daedalus wallet client. It is very important to note that transactions performed in Daedalus Flight are real and your funds will be transferred because the Cardano blockchain will be validating all transactions on mainnet.",
