--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -112,7 +112,6 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
@@ -130,7 +129,6 @@
   "global.labels.close": "閉じる",
   "global.labels.create": "作成",
   "global.labels.filter": "フィルター",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
   "global.labels.save": "保存する",
@@ -313,9 +311,9 @@
   "staking.delegationCenter.unknownStakePoolLabel": "不明の",
   "staking.delegationCenter.walletAmount": "{amount}ADA",
   "staking.delegationCountdown.buttonLabel": "もっと知る",
-  "staking.delegationCountdown.description": "Cardanoはまもなく連合型システムから分散型システムへと移行します。このシステム変更により、ステークホルダーはネットワークの運営に参加することで、報酬を得ることができるようになります。ADAによる報酬を得るためには、直接ステーキングプロセスに参加、またはステークプールにステーキングを委任します。",
-  "staking.delegationCountdown.heading": "Cardano分散化",
-  "staking.delegationCountdown.timeLeftDesc": "報酬制開始まであと",
+  "staking.delegationCountdown.description": "Cardanoはまもなく連合型システムから分散型システムへの移行を開始します。その第一歩はShelleyアップグレードの有効化です。アップグレードが完了すると、ステークプールの登録が開始され、ユーザーはウォレットを委任できるようになります。2エポック（12時間）後、ステークプールはブロックの生成を開始し、ユーザーは自分のステークを委任することにより報酬を稼ぎ始めることができるようになります。最初の報酬の配分は（予定されている場合）、さらに2エポック（12時間）後となります。",
+  "staking.delegationCountdown.heading": "Shelleyアップグレード",
+  "staking.delegationCountdown.timeLeftDesc": "Shelley開始まであと",
   "staking.delegationSetup.chooseStakePool.step.dialog.continueButtonLabel": "続ける",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールに委任されています。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールへの委任処理中です。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
@@ -377,10 +375,10 @@
   "staking.epochs.tableHeader.performance": "パフォーマンス",
   "staking.epochs.tableHeader.sharedRewards": "報酬の割当て",
   "staking.info.buttonLabel": "もっと知る",
-  "staking.info.description": "Cardanoは作成者がコントロールする連合型システムから、ADAステークホルダーが運営する分散型システムへと移行しています。この移行中、新たなブロックは連合型で運営されているノードまたはADAステークホルダーにより実行されているノードのいずれかにより生成されます。すべての報酬はADAステークホルダーにのみ分配され、連合型ノードのオペレーターに支払われることはありません。",
-  "staking.info.heading": "Cardanoは分散型システムへと変わります",
+  "staking.info.description": "Cardanoは作成者が運営する連合型システムから、ステークプールオペレーターのコミュニティが運営する分散型システムへと移行しています。この移行期間、ブロックは連合型ノードと、ステークプールの両者により生成されます。ステークプールによるブロック生成率はエポックごとに高まり、最終的にCardanoネットワークにおけるブロック生成は完全に分散化されます。",
+  "staking.info.heading": "Cardanoは分散型システムへと移行しています",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
-  "staking.info.percentage": "現在、システムの{percentage}%が分散化され、ステークプールにより運営されています。",
+  "staking.info.percentage": "現在、ステークプールによるブロック生成率は{percentage}%です。",
   "staking.navigation.delegation_center": "委任センター",
   "staking.navigation.epochs": "エポック",
   "staking.navigation.info": "情報",
@@ -475,7 +473,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "了解しました",
   "static.splash.network.flightDescription1": "Daedalus Flightウォレットをダウンロードいただきありがとうございます。このDaedalusバージョンは、Daedalusウォレットの製品バージョンをメインネットへリリースする前に、ユーザーが新機能をテストし、開発チームが使用性に関するバグに対処するために特別に作成したバージョンです。",
   "static.splash.network.flightDescription2": "Flight候補版は機能性をテストするためにデザインされていますが、これはメインネットに接続されており、<b>メインネットのADAを使用します。Flight候補版を使用して実行されるトランザクションでは実際のADAによる支払いが生じます。</b>パワーユーザー以外は、完全にテスト済みの安定した製品版Daedalusウォレットの使用を継続することを推奨します。Daedalus Flightウォレットで実行されるトランザクションは実際のものであり、すべてのトランザクションはCardanoブロックチェーンにメインネット上で検証されるため、ユーザーの資金は実際に送金されるということを十分に理解してください。",
