[DDW-294] Byron to Shelley transition (#2079)
* [DDW-294]: Add isShelleyActivated observable in staking store

* [DDW-294]: Fix isShelleyActivated polling

* [DDW-294]: Enable shelley wallet restoration

* [DDW-294] Hide Send tab and Legacy wallet migration notification

* [DDW-294]: Fix shelley wallet restoration

* [DDW-294]: Enable stake pools polling only when shelley is activated

* [DDW-294] Hide learn more buttons, configure sidebar

* [DDW-294] Replace creation of Byron with creation of 15-word Shelley wallets

* [DDW-294] Add shelley activation check while fetching wallets

* [DDW-294] Introduce decentralization level (percentage) poller

* [DDW-294] Byron to shelley transition

* [DDW-294] Byron to shelley transition - fix

* [DDW-294] Hide legacy badge before shelley hardfork

* [DDW-294] Adds CHANGELOG

* [DDW-294] Activation and decentralization copy update

* [DDW-294] Improve stake pool loader

* [DDW-294] Improve logic

Co-authored-by: Yakov Karavelov <yakov.karavelov@iohk.io>
Co-authored-by: Tomislav Horaček <tomislav.horacek@thespian.hr>
Co-authored-by: Aleksandar Djordjevic <aca_eliminator@hotmail.com>

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -313,9 +313,9 @@
   "staking.delegationCenter.unknownStakePoolLabel": "不明の",
   "staking.delegationCenter.walletAmount": "{amount}ADA",
   "staking.delegationCountdown.buttonLabel": "もっと知る",
-  "staking.delegationCountdown.description": "Cardanoはまもなく連合型システムから分散型システムへと移行します。このシステム変更により、ステークホルダーはネットワークの運営に参加することで、報酬を得ることができるようになります。ADAによる報酬を得るためには、直接ステーキングプロセスに参加、またはステークプールにステーキングを委任します。",
-  "staking.delegationCountdown.heading": "Cardano分散化",
-  "staking.delegationCountdown.timeLeftDesc": "報酬制開始まであと",
+  "staking.delegationCountdown.description": "Cardanoはまもなく連合型システムから分散型システムへの移行を開始します。その第一歩はShelleyアップグレードの有効化です。アップグレードが完了すると、ステークプールの登録が開始され、ユーザーはウォレットを委任できるようになります。2エポック（12時間）後、ステークプールはブロックの生成を開始し、ユーザーは自分のステークを委任することにより報酬を稼ぎ始めることができるようになります。最初の報酬の配分は（予定されている場合）、さらに2エポック（12時間）後となります。",
+  "staking.delegationCountdown.heading": "Shelleyアップグレード",
+  "staking.delegationCountdown.timeLeftDesc": "Shelley開始まであと",
   "staking.delegationSetup.chooseStakePool.step.dialog.continueButtonLabel": "続ける",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールに委任されています。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "<span>{selectedWalletName}</span>ウォレットは既に<span>「{selectedPoolTicker}」</span>ステークプールへの委任処理中です。<span>ステークの委任先を変更する場合は、異なるプールを選択してください。</span>",
@@ -377,10 +377,10 @@
   "staking.epochs.tableHeader.performance": "パフォーマンス",
   "staking.epochs.tableHeader.sharedRewards": "報酬の割当て",
   "staking.info.buttonLabel": "もっと知る",
-  "staking.info.description": "Cardanoは作成者がコントロールする連合型システムから、ADAステークホルダーが運営する分散型システムへと移行しています。この移行中、新たなブロックは連合型で運営されているノードまたはADAステークホルダーにより実行されているノードのいずれかにより生成されます。すべての報酬はADAステークホルダーにのみ分配され、連合型ノードのオペレーターに支払われることはありません。",
-  "staking.info.heading": "Cardanoは分散型システムへと変わります",
+  "staking.info.description": "Cardanoは作成者が運営する連合型システムから、ステークプールオペレーターのコミュニティが運営する分散型システムへと移行しています。この移行期間、ブロックは連合型ノードと、ステークプールの両者により生成されます。ステークプールによるブロック生成率はエポックごとに高まり、最終的にCardanoネットワークにおけるブロック生成は完全に分散化されます。",
+  "staking.info.heading": "Cardanoは分散型システムへと移行しています",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja",
-  "staking.info.percentage": "現在、システムの{percentage}%が分散化され、ステークプールにより運営されています。",
+  "staking.info.percentage": "現在、ステークプールによるブロック生成率は{percentage}%です。",
   "staking.navigation.delegation_center": "委任センター",
   "staking.navigation.epochs": "エポック",
   "staking.navigation.info": "情報",
@@ -490,7 +490,7 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "もっと知る",
-  "static.splash.network.stnDescription": "<p>このDaedalusバージョンは、Shelleyテストネットネットワーク第2イテレーションで使用するための専用バージョンです。</p><p>本バージョンにより、今夏委任機能がCardanoメインネットで使用可能となる前に、テストネットADAを使用してそのメカニズムを体験し、報酬の仕組みを理解することができます。</p>",
+  "static.splash.network.stnDescription": "<p>このDaedalusバージョンは、Shelleyテストネットネットワーク第3イテレーションで使用するための専用バージョンです。</p><p> 本バージョンにより、今夏委任機能がCardanoメインネットで使用可能となる前に、テストネットADAを使用してそのメカニズムを体験し、報酬の仕組みを理解することができます。</p><p> 日本時間7月20日午前9時にCardanoメインネットのADA残高スナップショットが実施され、この残高がCardanoテストネットのテストADAとして利用可能となりました。このスナップショットの時点でCardanoメインネットにADAを保有していた場合、このDaedalusバージョンを使用してメインネットのByronウォレットをShelleyテストネットで復元することができます。</p><p><b> このDaedalusバージョンはByronウォレットの送金機能をサポートしていません。この機能は今後まもなく予定されている更新で可能となります。</b></p><p> インセンティブ付きテストネットプログラムに参加していた場合は、Daedalus最新バージョンでインセンティブ付きテストネットの報酬を確認することができます。その際は、15語のウォレット復元フレーズを使用して、Daedalus RewardsまたはYoroiのウォレットを復元してください。</p>",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
   "static.splash.network.stnVersionName": "Shelleyテストネット",
   "static.splash.network.title": "Daedalus",
