--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -2568,7 +2568,7 @@
         }
       },
       {
-        "defaultMessage": "!!!This version of Daedalus has been created specifically for the use with the second phase of the Shelley Testnet.",
+        "defaultMessage": "!!!This version of Daedalus has been created to be used specifically with the third iteration of the Shelley testnet network.",
         "description": "stnDescription on network splash screen",
         "end": {
           "column": 3,
@@ -2629,7 +2629,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Cardano decentralization",
+        "defaultMessage": "!!!Shelley upgrade",
         "description": "Headline for the Decentralisation notification.",
         "end": {
           "column": 3,
@@ -2643,7 +2643,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Cardano will soon start its transition from a federated to a decentralized system. This will mark the start of stakeholders being able to earn rewards for participating in the running of the network. They will be able to participate directly in the process of staking or can delegate their stake to stake pools to earn rewards in ada.",
+        "defaultMessage": "!!!Cardano will soon start transitioning from a federated to a decentralized system. The first step is the activation of the Shelley upgrade. Once the upgrade is complete, stake pools will start registering and users will be able to delegate their wallets. Two epochs (12 hours) later, stake pools will begin producing blocks and users could start earning rewards from delegating their stakes. The first rewards, where due, will be distributed two more epochs later (12 hours).",
         "description": "Info for the Decentralisation notification.",
         "end": {
           "column": 3,
@@ -3851,7 +3851,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and the next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong>. During this time, your previous delegation preferences remain active.",
+        "defaultMessage": "!!!Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and the next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong> During this time, your previous delegation preferences remain active.",
         "description": "Description \"line 2\" on the delegation setup \"success\" step dialog.",
         "end": {
           "column": 3,
@@ -4058,7 +4058,7 @@
   {
     "descriptors": [
       {
-        "defaultMessage": "!!!Cardano is transitioning to a decentralized system",
+        "defaultMessage": "!!!Cardano is transitioning into a decentralized system",
         "description": "Headline for the Decentralization progress notification.",
         "end": {
           "column": 3,
@@ -4072,7 +4072,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Cardano is transitioning from a federated to a decentralized system. During this transition, some new blocks will be produced by nodes operated in a federated way and some by nodes run by ada stakeholders. All rewards will be distributed to ada stakeholders and none to operators of federated nodes.",
+        "defaultMessage": "!!!Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
         "description": "Info description for the Decentralization progress notification.",
         "end": {
           "column": 3,
@@ -4086,7 +4086,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Currently, {percentage}% of the system is decentralized and operated by stake pools.",
+        "defaultMessage": "!!!Currently, {percentage}% of the blocks are produced by the stake pools.",
         "description": "Percentage info description for the Decentralization progress notification.",
         "end": {
           "column": 3,
