--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -313,9 +313,9 @@
   "staking.delegationCenter.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.walletAmount": "{amount} ADA",
   "staking.delegationCountdown.buttonLabel": "Learn more",
-  "staking.delegationCountdown.description": "Cardano will soon start its transition from a federated to a decentralized system. This will mark the start of stakeholders being able to earn rewards for participating in the running of the network. They will be able to participate directly in the process of staking or can delegate their stake to stake pools to earn rewards in ada.",
-  "staking.delegationCountdown.heading": "Cardano decentralization",
-  "staking.delegationCountdown.timeLeftDesc": "Rewards begin in",
+  "staking.delegationCountdown.description": "Cardano will soon start transitioning from a federated to a decentralized system. The first step is the activation of the Shelley upgrade. Once the upgrade is complete, stake pools will start registering and users will be able to delegate their wallets. Two epochs (12 hours) later, stake pools will begin producing blocks and users could start earning rewards from delegating their stakes. The first rewards, where due, will be distributed two more epochs later (12 hours).",
+  "staking.delegationCountdown.heading": "Shelley upgrade",
+  "staking.delegationCountdown.timeLeftDesc": "Shelley upgrade in",
   "staking.delegationSetup.chooseStakePool.step.dialog.continueButtonLabel": "Continue",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolLabel": "You are already delegating <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "You are already pending delegation <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
@@ -377,10 +377,10 @@
   "staking.epochs.tableHeader.performance": "Performance",
   "staking.epochs.tableHeader.sharedRewards": "Shared rewards",
   "staking.info.buttonLabel": "Learn more",
-  "staking.info.description": "Cardano is transitioning from a federated system controlled by its creators, to a decentralized system run by ada stakeholders. During this change, some new blocks will be produced by nodes operated in a federated way and some by nodes run by ada stakeholders. All rewards will be distributed to ada stakeholders and none to operators of federated nodes.",
-  "staking.info.heading": "Cardano is turning into a decentralized system",
+  "staking.info.description": "Cardano is transitioning from a federated system operated by its creators to a decentralized system operated by a community of stake pool operators. During this transition, blocks will be produced both by the federated nodes and by stake pools. The percentage of blocks produced by stake pools will increase every epoch until block production in the Cardano network becomes fully decentralized.",
+  "staking.info.heading": "Cardano is transitioning into a decentralized system",
   "staking.info.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us",
-  "staking.info.percentage": "Currently, {percentage}% of the system is decentralized and operated by stake pools.",
+  "staking.info.percentage": "Currently, {percentage}% of the blocks are produced by the stake pools.",
   "staking.navigation.delegation_center": "Delegation center",
   "staking.navigation.epochs": "Epochs",
   "staking.navigation.info": "Info",
@@ -490,7 +490,7 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "Learn more",
-  "static.splash.network.stnDescription": "<p>This version of Daedalus has been created specifically for the use with the second iteration of the Shelley testnet network.</p><p>You can use it to experience the delegation mechanics and understand how the rewards work, using testnet ada before this becomes available on the Cardano mainnet later this summer.</p>",
+  "static.splash.network.stnDescription": "<p>This version of Daedalus has been created to be used specifically with the third iteration of the Shelley testnet network.</p><p> You can use it to experience the delegation mechanics and understand how the rewards work, using testnet ada before this becomes available on the Cardano mainnet later this summer.</p><p> We have taken a snapshot of ada balances on the Cardano mainnet on the 20th of July at 12 am UTC and made those balances available as test ada on the Cardano testnet. If you held ada on the Cardano mainnet at the time of the snapshot, you can restore your mainnet Byron wallets on the Shelley testnet using this version of Daedalus.</p><p><b> This version of Daedalus does not support spending from Byron wallets. This feature will be enabled in an upcoming update, available soon.</b></p><p> If you participated in the Incentivized Testnet program, you can use the new version of Daedalus to check your Incentivized Testnet rewards. To do this, restore your wallet using the 15-word recovery phrase for your Daedalus Rewards or Yoroi wallet.</p>",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
   "static.splash.network.stnVersionName": "SHELLEY TESTNET",
   "static.splash.network.title": "Daedalus",
