--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -184,8 +184,8 @@
   "news.updateOverlay.subtitle": "You are currently running Daedalus version <b>{currentVersion}</b>. Daedalus version <b>{availableVersion}</b> is now available to download.",
   "news.updateOverlay.checkboxLabel": "I understand that I need to complete the installation before starting Daedalus.",
   "news.updateOverlay.buttonLabel": "Quit Daedalus and start the installation",
-  "news.updateOverlay.downloadInProgressLabel": "Download in progress",
-  "news.updateOverlay.downloadProgress": "({downloaded} MB of {total} MB downloaded)",
+  "news.updateOverlay.downloadProgressLabel": "Download in progress",
+  "news.updateOverlay.downloadProgressData": "({downloaded} MB of {total} MB downloaded)",
   "noDiskSpace.error.overlayContent": "<b>Daedalus requires at least {diskSpaceRequired} of hard drive space to operate. Your computer is missing {diskSpaceMissing} of available space. Please delete some files to increase available hard drive space to continue using Daedalus. </b><br /><br />It is recommended to have at least 15% of hard drive space available ({diskSpaceRecommended} in your case) for normal and stable operation of the operating system and installed programs. We strongly recommend that you free up at least that amount of space from your hard drive.",
   "noDiskSpace.error.overlayTitle": "Daedalus requires more hard drive space",
   "notification.copyAddress": "Address: <strong>{address}</strong> copied to clipboard",
